--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Django==4.1.7
-django-extensions==3.2.1
-flake8==6.0.0
-ipython==8.11.0
-pylint==2.17.0
-pytest==7.2.2
+Django>=4.2.2
+django-extensions>=3.2.3
+djangorestframework>=3.14.0
+flake8>=6.0.0
+ipython>=8.14.0
+plint>=0.1
+pytest>=7.3.2
